# lana

./: CMakeLists.txt  README.md  generate_random_graphs.py
data/lana_paper/: Snakefile
data/lana_paper/input/: mmu_hsa_orthologs.txt
data/lana_paper/original_data/: README.txt  cel-6239.gw  hsa-9606.gw  mmu-10090.gw  rno-10116.gw
data/lana_paper/scripts/: ENSEMBL_to_Gm.py
src/: Molecule.h  Protein.h  bronkerbosch.h  bronkerboschconnected.h  bronkerboschconnectedrelaxed.h  config.h.in  lana.cpp  lana.h  lna.h  options.h  product.h  proteinnetwork.h  verbose.h
src/input/: bpcandlistparser.h  matchinggraph.h
src/output/: output.h  outputsif.h
